zmiana tekstow w tabeli klim

--- a/manual.html
+++ b/manual.html
@@ -153,19 +153,19 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>S1:playroom</td>
+                  <td>S1: Playroom</td>
                   <td>Jednostka w pokoju zabwa</td>
                 </tr>
                 <tr>
-                  <td>S1:salon</td>
+                  <td>S1: Salon</td>
                   <td>Jednostka w salonie/kuchni</td>
                 </tr>
                 <tr>
-                  <td>S2:Stairs</td>
+                  <td>S2: Stairs</td>
                   <td>Jednostka nad schodami do góry</td>
                 </tr>
                 <tr>
-                  <td>S2:Daniel</td>
+                  <td>S2: Daniel</td>
                   <td>Jednostka w pokoju Daniela</td>
                 </tr>
                 <tr>
