--- a/manual.html
+++ b/manual.html
@@ -143,42 +143,42 @@
             playroomu na dole S2: to system nad schodami do góry + pokój Daniela
             (na górze z tarasem) Entrada: jednoska zaraz nad wejściem do domu.
             Office: jednostka w biurze.
-          <div class="centered-container">
-            <table class="styled-table">
-              <thead>
-                <tr>
-                  <th>Nazwa jednostki</th>
-                  <th>Miejsce instalacji</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>S1: Playroom</td>
-                  <td>Jednostka w pokoju zabwa</td>
-                </tr>
-                <tr>
-                  <td>S1: Salon</td>
-                  <td>Jednostka w salonie/kuchni</td>
-                </tr>
-                <tr>
-                  <td>S2: Stairs</td>
-                  <td>Jednostka nad schodami do góry</td>
-                </tr>
-                <tr>
-                  <td>S2: Daniel</td>
-                  <td>Jednostka w pokoju Daniela</td>
-                </tr>
-                <tr>
-                  <td>Entrada</td>
-                  <td>Jednostka zaraz nad wjeściem do domu</td>
-                </tr>
-                <tr>
-                  <td>Office</td>
-                  <td>Jednostka w biurze</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+            <div class="centered-container">
+              <table class="styled-table">
+                <thead>
+                  <tr>
+                    <th>Nazwa jednostki</th>
+                    <th>Miejsce instalacji</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>S1: Playroom</td>
+                    <td>Jednostka w pokoju zabwa</td>
+                  </tr>
+                  <tr>
+                    <td>S1: Salon</td>
+                    <td>Jednostka w salonie/kuchni</td>
+                  </tr>
+                  <tr>
+                    <td>S2: Stairs</td>
+                    <td>Jednostka nad schodami do góry</td>
+                  </tr>
+                  <tr>
+                    <td>S2: Daniel</td>
+                    <td>Jednostka w pokoju Daniela</td>
+                  </tr>
+                  <tr>
+                    <td>Entrada</td>
+                    <td>Jednostka zaraz nad wjeściem do domu</td>
+                  </tr>
+                  <tr>
+                    <td>Office</td>
+                    <td>Jednostka w biurze</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </li>
 
           <li>
@@ -195,6 +195,10 @@
             kontrolować działanie klimy w całym domu, włączając odpowiednie
             temporyzacje. Temporyzacje są dobrane odpowiednio do produkcji prądu
             panelami.
+            <div class="float-right centered-container margin-around">
+              <img src="stub.png" alt="" width="300px" />
+              <figcaption>Inteligenty kontroler klimatyzacji</figcaption>
+            </div>
           </li>
 
           <li>
@@ -238,7 +242,13 @@
         <h2>Prąd i jego optymalizacja</h2>
         <h3>Prąd:</h3>
         <ol>
-          <li>Bezpieczniki są za drzwiami przy schodach do góry domu.</li>
+          <li>
+            Bezpieczniki są za drzwiami przy schodach do góry domu.
+            <div class="float-right centered-container margin-around">
+              <img src="stub.png" alt="" width="300px" />
+              <figcaption>Instalacja paneli</figcaption>
+            </div>
+          </li>
 
           <li>
             Jest instalacja paneli słonecznych, jej moc jest tak dobrana aby
@@ -261,6 +271,13 @@
             Optymalizacja prądowa jest o tyle ważna, że używając jej rachunek za
             prąd to kilkadziesiąt euro, a nie stosując jej w sezonie chłodniczym
             może to być kilkaset euro.
+            <div
+              id="photo-pv"
+              class="float-left centered-container margin-around"
+            >
+              <img src="stub.png" alt="" width="300px" />
+              <figcaption>Instalacja paneli</figcaption>
+            </div>
           </li>
 
           <li>
@@ -340,6 +357,10 @@
             </li>
 
             <li>
+              <div class="float-right centered-container margin-around">
+                <img src="stub.png" alt="" width="300px" />
+                <figcaption>Maszyneria basenowa</figcaption>
+              </div>
               Aby móc się kąpać nie trzeba nic robić z basenem (prawie nic :) ),
               gdyż wszystko jest na automacie: 8h dziennie filtracja,
               elektroliza zamieniająca sól w chlor, zarządzanie pracą
@@ -382,51 +403,56 @@
             <li>
               Robot czyszczący znajduje się w kanciapie za drzwiami przy
               basenie.
-              <p id="uzytkowanie">Użytkowanie:</p>
-              <p id="basen2">-wyciągnąć przed drzwi wózek z robotem,</p>
-              <p id="basen2">
-                -kabel od wózka przypiąć do gniazdka wewnątrz kanciapy
-              </p>
-              <p id="basen2">-robota włożyć do wody,</p>
-              <p id="basen2">
-                -rozłożyć mu na wodzie ¾ całego kabla, tak aby mu wystarczyło do
-                podróżowania po całym dnie
-              </p>
-              <p id="basen2">
-                -nie przejmować się że kabel trochę się będzie plątał
-              </p>
-              <p id="basen2">
-                -uruchomić jednym z przycisków na panelu na wózku (pojawi się
-                czas 2:30 do końca)
-              </p>
 
-              <p id="chowanie">Chowanie robota:</p>
-              <p id="basen2">-wyciągnąć robota z wody na trawę</p>
-              <p id="basen2">-otworzyć klapę żółtym przyciskiem oraz ciągnąc</p>
-              <p id="basen2">-wyciągnąć filtr i otworzyć klapkę</p>
-              <p id="basen2">
-                -wysypać zawartość filtru za działkę w kierunku lasku
-              </p>
-              <p id="basen2">
-                -przepłukać filtr do czysta wężem ogrodowym i zamknąć klapkę
-                (zwracając uwagę czy ząbki zaszły)
-              </p>
+              <h3>Użytkowanie:</h3>
+              <div
+                id="photo-pv"
+                class="float-right centered-container margin-around"
+              >
+                <img src="stub.png" alt="" width="300px" />
+                <figcaption>Robot basenowy</figcaption>
+              </div>
+              <ul>
+                <li>wyciągnąć przed drzwi wózek z robotem,</li>
+                <li>kabel od wózka przypiąć do gniazdka wewnątrz kanciapy</li>
+                <li>robota włożyć do wody,</li>
+                <li>
+                  rozłożyć mu na wodzie ¾ całego kabla, tak aby mu wystarczyło
+                  do podróżowania po całym dnie
+                </li>
+                <li>nie przejmować się że kabel trochę się będzie plątał</li>
+                <li>
+                  uruchomić jednym z przycisków na panelu na wózku (pojawi się
+                  czas 2:30 do końca)
+                </li>
+              </ul>
+              <h3>Chowanie robota:</h3>
+              <ul>
+                <li>wyciągnąć robota z wody na trawę</li>
+                <li>otworzyć klapę żółtym przyciskiem oraz ciągnąc</li>
+                <li>wyciągnąć filtr i otworzyć klapkę</li>
+                <li>wysypać zawartość filtru za działkę w kierunku lasku</li>
+                <li>
+                  przepłukać filtr do czysta wężem ogrodowym i zamknąć klapkę
+                  (zwracając uwagę czy ząbki zaszły)
+                </li>
 
-              <p id="basen2">
-                -włożyć filtr z powrotem do robota (będą problemy z wejściem
-                jeśli klapka została krzywo zamknięta)
-              </p>
+                <li>
+                  włożyć filtr z powrotem do robota (będą problemy z wejściem
+                  jeśli klapka została krzywo zamknięta)
+                </li>
 
-              <p id="basen2">
-                -na tym etapie można poprzestać bo nic mu nie będzie na
-                zewnątrz, a na koniec dnia i tak go warto włączyć na noc
-              </p>
-              <p id="basen2">-ułożyć robota na wózku</p>
-              <p id="basen2">
-                -postarać się zwinąć kabel (to nie takie łatwe bez wprawy)
-              </p>
-              <p id="basen2">-odłączyć prąd</p>
-              <p id="basen2">-wstawić wózek do kanciapy i zamknąć.</p>
+                <li>
+                  na tym etapie można poprzestać bo nic mu nie będzie na
+                  zewnątrz, a na koniec dnia i tak go warto włączyć na noc
+                </li>
+                <li>ułożyć robota na wózku</li>
+                <li>
+                  postarać się zwinąć kabel (to nie takie łatwe bez wprawy)
+                </li>
+                <li>odłączyć prąd</li>
+                <li>wstawić wózek do kanciapy i zamknąć.</li>
+              </ul>
             </li>
           </ol>
         </div>
@@ -501,7 +527,31 @@
               W kuchni Głównej i Porché jest woda z osmozy - czyli taka
               oczyszczona i bardzo zdatna do picia (nie trzeba kupować) - taki
               mały kranik obok dużego kranu.
+              <div class="flexbox">
+                <div
+                  id="photo-pv"
+                  class="centered-container margin-around"
+                >
+                  <img src="stub.png" alt="" width="300px" />
+                  <figcaption>Kranik w kuchni głównej</figcaption>
+                </div>
+                <div
+                  id="photo-pv"
+                  class="centered-container margin-around"
+                >
+                  <img src="stub.png" alt="" width="300px" />
+                  <figcaption>Kranik na porchè</figcaption>
+                </div>
+                <div
+                  id="photo-pv"
+                  class=" centered-container margin-around"
+                >
+                  <img src="stub.png" alt="" width="300px" />
+                  <figcaption>Maszyna osmozy</figcaption>
+                </div>
+              </div>
             </li>
+
             <li>
               Osmoza może się zapowietrzyć jak za jednym razem spuści się 3-4
               litry wody. Wówczas trzeba odczekać, a w najgorszym przypadku
@@ -564,6 +614,13 @@
               do gofrów, opiekacz do kurczaka - opcje można znaleźć w najniższej
               szufladzie na lewo od wejścia do Gospodarczego)
             </li>
+            <div
+              id="photo-pv"
+              class="float-right centered-container margin-around"
+            >
+              <img src="stub.png" alt="" width="300px" />
+              <figcaption>Zawór od gazu</figcaption>
+            </div>
             <li>
               przed rozpoczęciem grillowania należy otworzyć zawór na butli
               gazowej, potem przyciskając kurek z lewej zakręcić go o 90st w
@@ -575,7 +632,9 @@
         </div>
       </div>
     </div>
+    
+    <div id="footer">
+      <div class="section">copyrights Hubert web development 2023</div>
+    </div>
   </body>
 </html>
-
-
