refactor pod jeden plik stylu

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <!-- strona główna- manual- atrakcje -->
           <ul>
             <li><button class="button">strona główna</button></li>
-            <li><button class="button">manual</button></li>
+            <li><a class="button" href="./manual.html">manual</a></li>
             <li><button class="button">atrakcje</button></li>
           </ul>
         </div>
@@ -39,7 +39,9 @@
           </p>
           <button>Zadzwoń i umów</button>
         </div>
-        <div class="col50"><img id="mainImage" src="view.jpeg" width="100%" alt="w" /></div>
+        <div class="col50">
+          <img id="mainImage" src="./images/view.jpeg" width="100%" alt="w" />
+        </div>
       </div>
     </div>
 
@@ -50,19 +52,19 @@
         <h2>Te pokoje czekają na Ciebie!</h2>
         <div class="flexbox">
           <div>
-            <img src="mini3.png" alt="" />
+            <img src="./images/mini3.png" alt="" />
             <figcaption>salon i jadalnia</figcaption>
           </div>
           <div>
-            <img src="mini1.png" alt="" />
+            <img src="./images/mini1.png" alt="" />
             <figcaption>sypialnia rodziców</figcaption>
           </div>
           <div>
-            <img src="mini2.png" alt="" />
+            <img src="./images/mini2.png" alt="" />
             <figcaption>pokój Daniela</figcaption>
           </div>
           <div>
-            <img src="mini4.png" alt="pokój Leny" title="pokój Leny" />
+            <img src="./images/mini4.png" alt="pokój Leny" title="pokój Leny" />
             <figcaption>pokój Leny</figcaption>
           </div>
         </div>
@@ -81,14 +83,14 @@
 
     <div id="map">
       <div class="section">
-        <div id="address"> <h3>
-          Jak dojechać?
-        </h3>
-      <p>
-        Passeig de la creu 19BIS<br/>
-        08860 Castelldefels<br/>
-        España<br/>
-      </p></div>
+        <div id="address">
+          <h3>Jak dojechać?</h3>
+          <p>
+            Passeig de la creu 19BIS<br />
+            08860 Castelldefels<br />
+            España<br />
+          </p>
+        </div>
         <div>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2998.7109914632474!2d1.9502856005892681!3d41.27162817132666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a482868b711261%3A0x3a6cd77292517014!2sPasseig%20de%20la%20Creu%2C%2019%2C%2008860%20Castelldefels%2C%20Barcelona!5e0!3m2!1spl!2ses!4v1688580142108!5m2!1spl!2ses"
@@ -108,4 +110,3 @@
     </div>
   </body>
 </html>
-
