--- a/manual.html
+++ b/manual.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Passeig de la creu 19BIS</title>
-    <link rel="stylesheet" href="styles2.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,7 +19,7 @@
         <div>
           <!-- strona główna- manual- atrakcje -->
           <ul>
-            <li><button class="button">strona główna</button></li>
+            <li><a class="button" href="./index.html">strona główna</a></li>
             <li><button class="button">manual</button></li>
             <li><button class="button">atrakcje</button></li>
           </ul>
@@ -53,7 +53,7 @@
                   urządzeniu przy drzwiach wejściowych
                 </div>
                 <div class="centered-container margined">
-                  <img src="stub.png " alt=" " />
+                  <img class="shadowed" src="stub.png " alt=" "/>
                   <figcaption>centralka alarmu</figcaption>
                 </div>
               </li>
@@ -83,7 +83,7 @@
       </div>
     </div>
 
-    <hr />
+    
     <div>
       <div id="wifi">
         <div class="section">
@@ -196,7 +196,7 @@
             temporyzacje. Temporyzacje są dobrane odpowiednio do produkcji prądu
             panelami.
             <div class="float-right centered-container margin-around">
-              <img src="stub.png" alt="" width="300px" />
+              <img class="shadowed" src="stub.png" alt="" width="300px" />
               <figcaption>Inteligenty kontroler klimatyzacji</figcaption>
             </div>
           </li>
@@ -245,7 +245,7 @@
           <li>
             Bezpieczniki są za drzwiami przy schodach do góry domu.
             <div class="float-right centered-container margin-around">
-              <img src="stub.png" alt="" width="300px" />
+              <img class="shadowed" src="stub.png" alt="" width="300px" />
               <figcaption>Instalacja paneli</figcaption>
             </div>
           </li>
@@ -275,7 +275,7 @@
               id="photo-pv"
               class="float-left centered-container margin-around"
             >
-              <img src="stub.png" alt="" width="300px" />
+              <img class="shadowed" src="stub.png" alt="" width="300px" />
               <figcaption>Instalacja paneli</figcaption>
             </div>
           </li>
@@ -358,7 +358,7 @@
 
             <li>
               <div class="float-right centered-container margin-around">
-                <img src="stub.png" alt="" width="300px" />
+                <img class="shadowed" src="stub.png" alt="" width="300px" />
                 <figcaption>Maszyneria basenowa</figcaption>
               </div>
               Aby móc się kąpać nie trzeba nic robić z basenem (prawie nic :) ),
@@ -409,7 +409,7 @@
                 id="photo-pv"
                 class="float-right centered-container margin-around"
               >
-                <img src="stub.png" alt="" width="300px" />
+                <img class="shadowed" src="stub.png" alt="" width="300px" />
                 <figcaption>Robot basenowy</figcaption>
               </div>
               <ul>
@@ -532,21 +532,21 @@
                   id="photo-pv"
                   class="centered-container margin-around"
                 >
-                  <img src="stub.png" alt="" width="300px" />
+                  <img class="shadowed" src="stub.png" alt="" width="300px" />
                   <figcaption>Kranik w kuchni głównej</figcaption>
                 </div>
                 <div
                   id="photo-pv"
                   class="centered-container margin-around"
                 >
-                  <img src="stub.png" alt="" width="300px" />
+                  <img class="shadowed" src="stub.png" alt="" width="300px" />
                   <figcaption>Kranik na porchè</figcaption>
                 </div>
                 <div
                   id="photo-pv"
                   class=" centered-container margin-around"
                 >
-                  <img src="stub.png" alt="" width="300px" />
+                  <img class="shadowed" src="stub.png" alt="" width="300px" />
                   <figcaption>Maszyna osmozy</figcaption>
                 </div>
               </div>
@@ -618,7 +618,7 @@
               id="photo-pv"
               class="float-right centered-container margin-around"
             >
-              <img src="stub.png" alt="" width="300px" />
+              <img class="shadowed" src="stub.png" alt="" width="300px" />
               <figcaption>Zawór od gazu</figcaption>
             </div>
             <li>
