zmiany treści w manualu

--- a/manual.html
+++ b/manual.html
@@ -47,19 +47,17 @@
               <li>
                 Alarm jest zewnętrzny. Zazwyczaj załączamy go na noc. Zdarza się
                 raz na 90 dni że jakiś element zewnętrzny na wietrze go uruchomi
-                w środku nocy (bardzo nieprzyjemne)
+                w środku nocy (bardzo nieprzyjemne).
               </li>
               <li>
                 Aby załączyć alarm trzeba wcisnąć prawy dolny przycisk na
-                urządzeniu przy drzwiach wejściowych
+                urządzeniu przy drzwiach wejściowych.
               </li>
               <li>
                 <div>
                   Wyłącza się go przytrzymując pestkę od kluczy przy tym samym
-                  urządzeniu przy drzwiach wejściowych
+                  urządzeniu przy drzwiach wejściowych.
                 </div>
-               
-               
               </li>
 
               <li>
@@ -74,7 +72,7 @@
               <li>
                 Zazwyczaj jednak opuszczamy rolety w całym domu zostawiając
                 lufciki wentylacyjne. Rolety dobrze blokują światło i można
-                dłużej pospać
+                dłużej pospać.
               </li>
               <li>
                 Uwaga: spuszczając rolety warto upewnić się że nie leży na ich
@@ -110,7 +108,7 @@
               Na terenie całej posesji jest internet rozdzielany z 5 punktów
               Google Nest Wifi o nazwie Denver. Prędkość od 300Mb w sypialni,
               150Mb w salonie, 30Mb w najodleglejszych pokojach. Sieć: Denver,
-              hasło: aaaaaaaa . Polecam używanie właśnie tej sieci.
+              hasło: <b>aaaaaaaa</b> . Polecam używanie właśnie tej sieci.
             </li>
 
             <li>
@@ -126,7 +124,7 @@
               można zrestartować ten punkt który stoi przy głośniku Marshall.
             </li>
 
-            <li>Naziemna nie działa.</li>
+            <li>Telewizja naziemna nie działa.</li>
 
             <li>
               Na każdym telewizorze skonfigurowany Netflix, Amazon Prime, Disney
@@ -143,11 +141,8 @@
         <h2>Klimatyzacja i wentylacja</h2>
         <ol>
           <li>
-            Klimatyzatory są 4 systemy (1 kompresor zewn. - 1 system) na 6
-            wewnętrznych jednostek S1: to system dla jednostki kuchni oraz
-            playroomu na dole S2: to system nad schodami do góry + pokój Daniela
-            (na górze z tarasem) Entrada: jednoska zaraz nad wejściem do domu.
-            Office: jednostka w biurze.
+            Klimatyzatory są 4 systemy (1 kompresor zewnętrzny = 1 system) na 6
+            wewnętrznych jednostek.
             <div class="centered-container">
               <table class="styled-table">
                 <thead>
@@ -159,23 +154,27 @@
                 <tbody>
                   <tr>
                     <td>S1: Playroom</td>
-                    <td>Jednostka w pokoju zabwa</td>
+                    <td>Jednostka w pokoju zabaw</td>
                   </tr>
                   <tr>
                     <td>S1: Salon</td>
-                    <td>Jednostka w salonie/kuchni</td>
+                    <td>
+                      Jednostka w salonie / kuchni, nad wejściem do pralni.
+                    </td>
                   </tr>
                   <tr>
                     <td>S2: Stairs</td>
-                    <td>Jednostka nad schodami do góry</td>
+                    <td>Jednostka nad schodami u góry.</td>
                   </tr>
                   <tr>
                     <td>S2: Daniel</td>
-                    <td>Jednostka w pokoju Daniela</td>
+                    <td>Jednostka w niebieskim pokoju Daniela</td>
                   </tr>
                   <tr>
                     <td>Entrada</td>
-                    <td>Jednostka zaraz nad wjeściem do domu</td>
+                    <td>
+                      Jednostka zaraz nad wjeściem do domu nad bezpiecznikami.
+                    </td>
                   </tr>
                   <tr>
                     <td>Office</td>
@@ -187,7 +186,7 @@
           </li>
 
           <li>
-            S1 oraz S2 używają tego samego typu pilota (są 3 takie piloty
+            S1 oraz S2 używają tego samego typu pilota (są 3 takie piloty marki
             General) a Entrada i Office innego (odpowiednio jeden oznaczony
             Inverter, drugi marki Mitsubishi). Pilotami należy operować z
             niewielkiej odległości. Natomiast nie polecamy ich używania,
@@ -196,10 +195,10 @@
 
           <li>
             Dla każdej jednostki wewnętrznej zainstalowany jest smart kontroler
-            imitujący pilota, działający z chmury. Dzięki temu możemy
+            imitujący pilota, działający z chmury Sensibo. Dzięki temu możemy
             kontrolować działanie klimy w całym domu, włączając odpowiednie
             temporyzacje. Temporyzacje są dobrane odpowiednio do produkcji prądu
-            panelami.
+            panelami. Moemy udostępnić dostęp do chmury jeśli będzie potrzebny.
             <div class="float-right centered-container margin-around">
               <img class="shadowed" src="stub.png" alt="" width="300px" />
               <figcaption>Inteligenty kontroler klimatyzacji</figcaption>
@@ -207,18 +206,20 @@
           </li>
 
           <li>
-            Używanie pilotów do klimatyzacji rozsynchronizowuje smart kontrolę z
-            chmury, tzn. stan klimy po użyciu pilota przestaje być spójny ze
-            stanem chmury. Dlatego nie polecamy używania pilotów. Oczywiście
-            możemy udostępnić system zarządzania klimami (uprzednio należy
-            zainstalować sobie appkę Sensibo).
+            <em
+              >Używanie pilotów do klimatyzacji rozsynchronizowuje smart
+              kontrolę z chmury, tzn. stan klimy po użyciu pilota przestaje być
+              spójny ze stanem chmury. Dlatego nie polecamy używania pilotów.
+              Oczywiście możemy udostępnić system zarządzania klimami (uprzednio
+              należy zainstalować sobie appkę Sensibo).</em
+            >
           </li>
 
           <li>
             Aby zoptymalizować działanie klimatyzacji, zoptymalizowaliśmy
             również nagrzewanie domu przez okna, tzn. rolety automatycznie
             domykają się o określonych godzinach, zapobiegając nadmiernemu
-            nagrzewaniu. (patrz ciał Rolety).
+            nagrzewaniu. (patrz rozdział Rolety).
           </li>
 
           <li>
@@ -226,15 +227,15 @@
             sufitowy, którego używanie rekomendujemy podczas snu. Do
             wentylatorów sufitowych są piloty. Wybiera się prędkość (zazwyczaj
             odpowiednia jest prędkość pierwsza), oraz czas, tzn. można nastawić
-            aby się wyłączyły po kilku godzinach same. Bez wybrania opcji czasu
-            będą się kręcić bez końca.
+            aby się wyłączyły po kilku godzinach same (rekomendujemy 8 godzin).
+            Bez wybrania opcji czasu będą się kręcić bez końca.
           </li>
 
           <li>
             Powyższe rozwiązania ustawione są tak, aby odpowiednio optymalizować
             zużycie prądu, jednocześnie zapewniając odpowiednią temperaturę.
-            Dlatego rekomendujemy pozostawienie ustawień dbać jedynie o
-            domknięcie drzwi / okien.
+            Dlatego rekomendujemy pozostawienie ustawień i dbanie jedynie o
+            domykanie drzwi podczas wychodzenia na zewnątrz.
           </li>
         </ol>
       </div>
@@ -244,7 +245,7 @@
 
     <div>
       <div class="section">
-        <h2>Prąd i jego optymalizacja</h2>
+        <h2>Prąd, optymalizacje, automatyzacje.</h2>
         <h3>Prąd:</h3>
         <ol>
           <li>
@@ -257,16 +258,8 @@
 
           <li>
             Jest instalacja paneli słonecznych, jej moc jest tak dobrana aby
-            zrównoważyć moc klimatyzatorów (ale tylko w dzień i tylko w peaku
-            produkcji),
-          </li>
-
-          <li>
-            W domu jest kilka urządzeń zaprogramowanych tak aby włączały i
-            wyłączały się automatycznie: rybki u Dana (włączają się 7:30,
-            wyłączają 21:00), lampka w salonie przy telewizorze (włącza się
-            21:00, wyłącza 23:30), odstraszacz na myszy na porché (włącza się
-            23:00, wyłącza 7:20), wentylator na porché.
+            zrównoważyć moc klimatyzatorów (ale tylko w dzień i tylko w szczycie
+            produkcji).
           </li>
         </ol>
 
@@ -288,7 +281,7 @@
           <li>
             Prąd dostarczany jest w taryfie dogodnej dla właścicieli samochodu
             elektrycznego, w skrócie: 0.03eur za kWh w godz. 01:00-07:00 w nocy,
-            w pozostałych godzinach ok. 0.4eur za kWh
+            w pozostałych godzinach ok. 0.40eur za kWh
           </li>
 
           <li>
@@ -305,6 +298,66 @@
             chmurze Sensibo.
           </li>
         </ol>
+
+        <h3>Automatyzacje</h3>
+        <p>
+          W domu jest kilka urządzeń zaprogramowanych tak aby włączały i
+          wyłączały się automatycznie: rybki u Dana (włączają się 7:30,
+          wyłączają 21:00), lampka w salonie przy telewizorze (włącza się 21:00,
+          wyłącza 23:30), odstraszacz na myszy na porché (włącza się 23:00,
+          wyłącza 7:20), wentylator na porché.
+        </p>
+        <ol>
+          <li>
+            rybki w pokoju zabaw na dole (włączają się 7:30, wyłączają 21:00),
+          </li>
+          <li>
+            lampka w salonie przy telewizorze (włącza się 21:00, wyłącza 23:00),
+          </li>
+          <li>
+            LavaLamp w niebieskim pokoju Daniela (włącza się o 18ej, wyłącza o
+            24:00)
+          </li>
+          <li>
+            odstraszacze na myszy na porché i w garau (włączają się 23:00,
+            wyłączają o 7:20)
+          </li>
+          <li>
+            pomarańczowy ekspres do kawy w kuchni (włącza się o 7:00, a wyłącza
+            o 19:00), chodzi o to że często nastawiamy sobie kawę wieczorem i
+            włączamy ekspres, wówczas rano wraz z włączeniem ekspresu kawa
+            zaczyna się robić
+          </li>
+          <li>Rolety okienne...</li>
+        </ol>
+
+        <p>Automatyzacje rolet okiennych</p>
+        <ol>
+          <li>Prawie wszystkie rolety w domu są zautomatyzowane.</li>
+          <li>
+            Przy wejściu do domu, obok bezpieczników jest włącznik / wyłącznik
+            ze strzałkami, który otwiera / zamyka wszystkie zautomatyzowane
+            rolety w salonie / kuchni. Wygodne na wejście / wyjście z domu.
+          </li>
+          <li>
+            Aby ręcznie otworzyć / zamknąć roletę należy albo trzymać przycisk,
+            albo wywołać impuls krótkim kliknięciem
+          </li>
+          <li>
+            Jak było wspomniane w dziale Klimatyzacji, niektóre okna (sypialnie i salon) otwierają
+            się lub przymykają same o określonych godzinach.
+          </li>
+          <li>
+            Przymykanie następuje za dnia celem zmniejszenia nagrzewania, oraz przed snem.
+          </li>
+          <li>
+            Otwieranie następuje rano o określonej godzinie (na chwilę obecną 7 rano) oraz w ciągu
+            dnia gdy słońce przestanie nagrzewać pokój.
+          </li>
+          <li>
+            Aby przestawić godzinę porannego otwierania i uniknąć nieoczekiwanego budzenia, prośba o kontakt.
+          </li>
+        </ol>
       </div>
     </div>
 
@@ -314,20 +367,26 @@
       <div class="section">
         <h2>Ogród</h2>
         <ol>
-          <li>Ogród nawadnia się sam.</li>
-
           <li>
-            Ogrodnik przychodzi dwa razy w miesiącu. Ma klucz. Co drugą wizytę
-            pryska przeciw komarom. Prosi aby wtedy pozamykać okna i zabrać
-            ręczniki z basenu. Lepiej też nie wychodzić przez dwie godziny po
-            opryskiwaniu.
+            Ogrodu ogólnie nie nawadniamy automatycznie przez suszę w hiszpanii.
           </li>
 
-          <li>Ogrodnik nie opryskuje ogródka warzywnego.</li>
+          <li>
+            Ogrodnik przychodzi dwa razy w miesiącu, zazwyczaj w środę. Ma
+            klucz.
+          </li>
 
           <li>
-            Zbierajcie i jedzcie i zioła z warzywnego co chcecie aby się nie
-            zmarnowało.
+            Na nowym tarasie obok kuchni jest trochę roślin. Prosimy o ich
+            podlewanie codziennie podczas pobytu wężem ogrodowym znajdującym się
+            obok bambusów.
+            <div
+              id="photo-pv"
+              class="float-left centered-container margin-around"
+            >
+              <img class="shadowed" src="stub.png" alt="" width="300px" />
+              <figcaption>Rośliny wymagające podlewania</figcaption>
+            </div>
           </li>
         </ol>
       </div>
@@ -367,17 +426,17 @@
                 <figcaption>Maszyneria basenowa</figcaption>
               </div>
               Aby móc się kąpać nie trzeba nic robić z basenem (prawie nic :) ),
-              gdyż wszystko jest na automacie: 8h dziennie filtracja,
+              gdyż wszystko jest na automacie: 12h dziennie filtracja,
               elektroliza zamieniająca sól w chlor, zarządzanie pracą
               elektrolizy (aby nie chlorować basenu ponad normę), podgrzewanie
               do 30st.
             </li>
 
             <li>
-              Odn. prawie nic: ponieważ nasza komórka elektrolizy jest nieco za
-              mała jak na wielkość basenu, w pełnym sezonie nie nadąża ona z
-              produkcją chloru, który w tym czasie wyparowuje, dlatego raz na
-              7-10 dni dobrze jest wsypać 2 szklanki chloru do skimmera na
+              Odnośnie "prawie nic": ponieważ nasza komórka elektrolizy jest
+              nieco za mała jak na wielkość basenu, w pełnym sezonie nie nadąża
+              ona z produkcją chloru, który w tym czasie wyparowuje, dlatego raz
+              na 7-10 dni dobrze jest wsypać 2 szklanki chloru do skimmera na
               koniec dnia kąpielowego. Skimmer, czyli sito, to ten otwór na
               końcu basenu. Ma on klapkę na górze, na poziomie gzymsu basenu,
               przez którą po jej uniesieniu należy wsypać chlor.
@@ -492,38 +551,26 @@
 
       <div>
         <div class="section">
-          <h2>Pokój Gospodarczy tzn:spiżarnia-pralnia-narzędzia-apteczka</h2>
+          <h2>Pokój Gospodarczy tzn: spiżarnia-pralnia-narzędzia</h2>
           <ol>
             <li>
               Spiżarnia, są tutaj: dodatkowa lodówka z zamrażarką, kilka szuflad
               do przechowywania jedzenia.
             </li>
-            <li>
-              Można tutaj też coś ugotować na gazie (uwaga, prawy dolny kurek
-              jest nieco wadliwy - nie używać).
-            </li>
+            <li>Można tutaj też coś ugotować na gazie.</li>
             <li>
               Pralnia, są tutaj: pralka, suszarka, środki do czyszczenia,
               żelazko, deska do prasowania.
             </li>
             <li>
-              Pościele i ręczniki łazienkowe również w tym pomieszczeniu w
-              szufladach.
-            </li>
-            <li>
-              Narzędzia są zarówno w szufladzie na lewo od wejścia jak i w
-              walizkach widocznych
-            </li>
-            <li>
-              Apteczka stoi na widoku - wszystko co mamy z leków jest tam.
-              Kluczyk do niej nam się złamał. Kluczyk ten leży na apteczce, i to
-              nim ją otwieramy pomimo złamania (dociskasz i kręcisz).
+              Leki znajdują się w module szafki wiszącym zaraz po lewej stronie
+              od wejścia.
             </li>
           </ol>
         </div>
       </div>
 
-      <div class="separator"></div> 
+      <div class="separator"></div>
       <div>
         <div class="section">
           <h2>Kuchnia</h2>
@@ -551,13 +598,13 @@
 
             <li>
               Osmoza może się zapowietrzyć jak za jednym razem spuści się 3-4
-              litry wody. Wówczas trzeba odczekać, a w najgorszym przypadku
-              wyciągnąć i włożyć do gniazdka wtyczkę od aparatury w kuchni
-              Porché (czerwona aparatura pod zlewem).
+              litry wody. Wówczas trzeba odczekać godzinę, a w najgorszym
+              przypadku wyciągnąć i włożyć do gniazdka wtyczkę od aparatury w
+              kuchni Porché (czerwona aparatura pod zlewem).
             </li>
             <li>
               Kuchnia na Porché jest w pełni wyposażona. Część naczyń jest w
-              zielonej bieliźniarce na Porché.
+              zielonej szafce na Porché.
             </li>
             <li>
               Zmywarki są dwie, jedna w Głównej, druga na Porché. Przy częstym
@@ -567,31 +614,31 @@
               tworzy się szpara którą ulatuje para i niszczy front.
             </li>
             <li>
-              Kostki do zmywarki oraz kuchenne środki czystości są w cargo na
-              prawo od zlewu
+              Kostki do zmywarki oraz kuchenne środki czystości są w szufladzie
+              cargo na prawo od zlewu
             </li>
             <li>
               Lodówki są 3: w Głównej, w Gospodarczym, na Porché (na wina). W
               zamrażarce powinien być lód.
             </li>
             <li>
-              W lodówce na wina są wina. Lodówka na wina w sezonie letnim nie ma
-              lekko ani chłodno. Stąd też jest nieco wysunięta aby ułatwić jej
-              oddawanie ciepła. Należy również wietrzyć to pomieszczenie 24/7
+              Lodówka na wina w sezonie letnim nie ma lekko ani chłodno. Stąd
+              też jest nieco wysunięta aby ułatwić jej oddawanie ciepła. Należy
+              również wietrzyć to pomieszczenie 24/7
             </li>
             <li>
               Ekspresy do kawy są 3: w Głównej (przepływowy), na Porché
-              DeLonghi, w Spiżarni Neff (nie działa). Ekspres przepływowy
-              zasilany wodą z osmozy (piszą aby nie wlewać jej poprzez dzbanek z
-              zestawu - bo brudny od kawy - tylko butelką z osmozy).
+              DeLonghi, w biurze (kapsułkowy). Ekspres przepływowy zasilany wodą
+              z osmozy (piszą aby nie wlewać jej poprzez dzbanek z zestawu (bo
+              brudny od kawy), tylko butelką z osmozy).
             </li>
             <li>
               Zasady parzenia przepływowym w głównej kuchni: jedna podziałka
               pojemnika na wodę (2 jednostki) odpowiada dwóm filiżankom kawy i
               sypiemy do tego jedną plastikową łyżkę którą można znaleźć w
-              jednym z metalowych pojemników na kawę, wodę nalewać z osmozy ale
-              używając butelki (bo czysta) a nie dzbanka kawowego (bo z osadem).
+              jednym z metalowych pojemników na kawę.
             </li>
+            <li>Kawy sypanej jest dużo w spiżarni, można sypać do woli.</li>
           </ol>
         </div>
       </div>
@@ -602,15 +649,14 @@
           <h2>Grill</h2>
           <ol>
             <li>
-              do dyspozycji jest kilka opcji: grill gazowy Weber duży, grill
-              gazowy Weber mały (schowany w bieliźniarce na porchè), piec na
+              Do dyspozycji jest kilka opcji: grill gazowy Weber duży, piec na
               pizze, grill standardowy (my nie używamy) obok pieca na pizze
             </li>
             <li>
               jeśli będziecie używać to zapewne opcję pierwszą (można ją
               wzbogacić o kilka opcji typu patelnia, garnek caserole, przystawka
               do gofrów, opiekacz do kurczaka - opcje można znaleźć w najniższej
-              szufladzie na lewo od wejścia do Gospodarczego)
+              szufladzie na wprost od wejścia do Gospodarczego)
             </li>
             <div
               id="photo-pv"
